# chatglm3-docker

./: README.md  docker-compose.yml  pyproject.toml  web_demo2.py
